# guu-cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  aboutwindow.cpp  aboutwindow.ui  api.cpp  api.h  categories.cpp  categories.h  clients.cpp  clients.h  conanfile.txt  constants.h  data.json  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  picturelist.cpp  picturelist.h  settings.cpp  settings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  uploadworker.cpp  uploadworker.h  utils.cpp  utils.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
assets/: guu.kra  icon.qrc
deploy/: linux-appimage.sh  mac-dmg.sh  windows-inst.iss
deploy/appdir/usr/share/applications/: io.github.vancer0.guu.desktop
src/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  api.cpp  api.h  categories.cpp  categories.h  clients.cpp  clients.h  constants.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  picturelist.cpp  picturelist.h  picturemanager.cpp  picturemanager.h  picturemanager.ui  settings.cpp  settings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  types.h  uploadworker.cpp  uploadworker.h  utils.cpp  utils.h
src/assets/: guu.kra-autosave.kra  icon.icns  icon.qrc  icon.rc
